comments and removing obsolete classes