@@ -1,21 +1,32 @@
 package pacman.entries.pacman;
 
 import dataRecording.DataTuple;
+import pacman.game.Constants;
+import pacman.game.Constants.MOVE;
+
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedList;
+
 import static pacman.entries.pacman.Attribute.*;
+import static pacman.entries.pacman.Attribute.INKY_EDIBLE;
 
+/**
+ * The class responsible for selecting attributs and calculating the gain of each of the attributes accoring to the dataset provided
+ *
+ * @author Sofia Hallberg, Oscar Kareld
+ * 04/01-2022
+ */
 public class AttributeSelector {
-
     private LinkedList<DataTuple> dataSet;
-    private AttributeList attributeList;
+    private ArrayList<AttributeObject>  attributeList;
     private double nbrOfTuples;
     private double nbrOfUp;
     private double nbrOfDown;
     private double nbrOfRight;
     private double nbrOfLeft;
 
-    public AttributeSelector(LinkedList<DataTuple> dataSet, AttributeList attributeList) {
+    public AttributeSelector(LinkedList<DataTuple> dataSet, ArrayList<AttributeObject> attributeList) {
         this.dataSet=dataSet;
         this.attributeList=attributeList;
     }
@@ -45,20 +56,17 @@ public class AttributeSelector {
         }
 
         double averageInfo=getAverageInfo(nbrOfTuples, nbrOfLeft, nbrOfRight, nbrOfUp, nbrOfDown);
-        //System.out.println("average info: "+averageInfo);
 
-        LinkedList<AttributeObject> list=attributeList.getList();
+        ArrayList<AttributeObject> list=attributeList;
         for (AttributeObject attributeObject:list) {
             switch(attributeObject.getAttribute()) {
                 case PACMAN_POSITION:
                     double infoInPosition=getDiscreteTagInfo(PACMAN_POSITION);
                     double gainPosition=averageInfo-infoInPosition;
-                    //System.out.println("gain in position: "+gainPosition);
                     setGain(gainPosition, PACMAN_POSITION);
                 case BLINKY_EDIBLE:
                     double infoInBlinkyEdible=getBooleanTagInfo(BLINKY_EDIBLE);
                     double gainBlinkyEdible=averageInfo-infoInBlinkyEdible;
-                    //System.out.println("gain in blinkyedible: "+gainBlinkyEdible);
                     setGain(gainBlinkyEdible, BLINKY_EDIBLE);
                 case INKY_EDIBLE:
                     double infoInInkyEdible=getBooleanTagInfo(INKY_EDIBLE);
@@ -88,17 +96,32 @@ public class AttributeSelector {
                     double infoInSueDistance=getDiscreteTagInfo(Attribute.SUE_DISTANCE);
                     double gainSueDist=averageInfo-infoInSueDistance;
                     setGain(gainSueDist, Attribute.SUE_DISTANCE);
+                case BLINKY_DIR:
+                    double infoInBlinkyDir=getGhostDirInfo(Attribute.BLINKY_DIR);
+                    double gainBlinkyDir=averageInfo-infoInBlinkyDir;
+                    setGain(gainBlinkyDir, Attribute.BLINKY_DIR);
+                case INKY_DIR:
+                    double infoInInkyDir=getGhostDirInfo(Attribute.INKY_DIR);
+                    double gainInkyDir=averageInfo-infoInInkyDir;
+                    setGain(gainInkyDir, Attribute.INKY_DIR);
+                case PINKY_DIR:
+                    double infoInPinkyDir=getGhostDirInfo(Attribute.PINKY_DIR);
+                    double gainPinkyDir=averageInfo-infoInPinkyDir;
+                    setGain(gainPinkyDir, Attribute.PINKY_DIR);
+                case SUE_DIR:
+                    double infoInSueDir=getGhostDirInfo(Attribute.SUE_DIR);
+                    double gainSueDir=averageInfo-infoInSueDir;
+                    setGain(gainSueDir, Attribute.SUE_DIR);
             }
         }
 
         Collections.sort(list);
-        System.out.println("selected attribute: "+String.valueOf(list.getFirst().getAttribute()));
-        return list.removeFirst().getAttribute();
+        return list.remove(0).getAttribute();
     }
 
     private void setGain(double gain, Attribute attribute) {
-        LinkedList<AttributeObject> list=attributeList.getList();
-        for(int i=0; i<attributeList.getSize(); i++) {
+        ArrayList<AttributeObject> list=attributeList;
+        for(int i=0; i<list.size(); i++) {
             if(list.get(i).getAttribute()==attribute) {
                 list.get(i).setGain(gain);
                 break;
@@ -145,7 +168,74 @@ public class AttributeSelector {
         return infoInTag;
     }
 
+    private double getGhostDirInfo(Attribute attribute) {
+        double nbrOfUp = 0;
+        double nbrOfDown = 0;
+        double nbrOfLeft = 0;
+        double nbrOfRight = 0;
+        double nbrOfNeutral = 0;
 
+        switch (attribute) {
+            case BLINKY_DIR:
+                for(int i=0; i<nbrOfTuples; i++) {
+                    if (dataSet.get(i).getBlinkyDir() == MOVE.UP)
+                        nbrOfUp++;
+                    if (dataSet.get(i).getBlinkyDir() == MOVE.DOWN)
+                        nbrOfDown++;
+                    if (dataSet.get(i).getBlinkyDir() == MOVE.LEFT)
+                        nbrOfLeft++;
+                    if (dataSet.get(i).getBlinkyDir() == MOVE.RIGHT)
+                        nbrOfRight++;
+                    if (dataSet.get(i).getBlinkyDir() == MOVE.NEUTRAL)
+                        nbrOfNeutral++;
+                }
+                break;
+            case INKY_DIR:
+                for(int i=0; i<nbrOfTuples; i++) {
+                    if (dataSet.get(i).getInkyDir() == MOVE.UP)
+                        nbrOfUp++;
+                    if (dataSet.get(i).getInkyDir() == MOVE.DOWN)
+                        nbrOfDown++;
+                    if (dataSet.get(i).getInkyDir() == MOVE.LEFT)
+                        nbrOfLeft++;
+                    if (dataSet.get(i).getInkyDir() == MOVE.RIGHT)
+                        nbrOfRight++;
+                    if (dataSet.get(i).getInkyDir() == MOVE.NEUTRAL)
+                        nbrOfNeutral++;
+                }
+            case PINKY_DIR:
+                for(int i=0; i<nbrOfTuples; i++) {
+                    if (dataSet.get(i).getPinkyDir() == MOVE.UP)
+                        nbrOfUp++;
+                    if (dataSet.get(i).getPinkyDir() == MOVE.DOWN)
+                        nbrOfDown++;
+                    if (dataSet.get(i).getPinkyDir() == MOVE.LEFT)
+                        nbrOfLeft++;
+                    if (dataSet.get(i).getPinkyDir() == MOVE.RIGHT)
+                        nbrOfRight++;
+                    if (dataSet.get(i).getPinkyDir() == MOVE.NEUTRAL)
+                        nbrOfNeutral++;
+                }
+            case SUE_DIR:
+                for(int i=0; i<nbrOfTuples; i++) {
+                    if (dataSet.get(i).getSueDir() == MOVE.UP)
+                        nbrOfUp++;
+                    if (dataSet.get(i).getSueDir() == MOVE.DOWN)
+                        nbrOfDown++;
+                    if (dataSet.get(i).getSueDir() == MOVE.LEFT)
+                        nbrOfLeft++;
+                    if (dataSet.get(i).getSueDir() == MOVE.RIGHT)
+                        nbrOfRight++;
+                    if (dataSet.get(i).getSueDir() == MOVE.NEUTRAL)
+                        nbrOfNeutral++;
+                }
+        }
+        return nbrOfUp/nbrOfTuples*(infoInDiscreteTagInfo(nbrOfUp))+
+                nbrOfDown/nbrOfTuples*(infoInDiscreteTagInfo(nbrOfDown))+
+                nbrOfLeft/nbrOfTuples*(infoInDiscreteTagInfo(nbrOfLeft))+
+                nbrOfRight/nbrOfTuples*(infoInDiscreteTagInfo(nbrOfRight))+
+                nbrOfNeutral/nbrOfTuples*(infoInDiscreteTagInfo(nbrOfNeutral));
+    }
 
     private double getDiscreteTagInfo(Attribute attribute) {
         double nbrOfVeryLow=0;
@@ -153,6 +243,7 @@ public class AttributeSelector {
         double nbrOfMedium=0;
         double nbrOfHigh=0;
         double nbrOfVeryHigh=0;
+        double nbrOfNone = 0;
 
         switch (attribute) {
             case PACMAN_POSITION:
@@ -167,6 +258,8 @@ public class AttributeSelector {
                         nbrOfHigh++;
                     if(dataSet.get(i).getPosition()==DataTuple.DiscreteTag.VERY_HIGH)
                         nbrOfVeryHigh++;
+                    if (dataSet.get(i).getPosition()==DataTuple.DiscreteTag.NONE)
+                        nbrOfNone++;
                 }
                 break;
             case BLINKY_DISTANCE:
@@ -181,6 +274,8 @@ public class AttributeSelector {
                         nbrOfHigh++;
                     if (dataSet.get(i).getBlinkyDistance() == DataTuple.DiscreteTag.VERY_HIGH)
                         nbrOfVeryHigh++;
+                    if (dataSet.get(i).getBlinkyDistance() == DataTuple.DiscreteTag.NONE)
+                        nbrOfNone++;
                 }
                 break;
             case INKY_DISTANCE:
@@ -195,6 +290,8 @@ public class AttributeSelector {
                         nbrOfHigh++;
                     if (dataSet.get(i).getInkyDistance() == DataTuple.DiscreteTag.VERY_HIGH)
                         nbrOfVeryHigh++;
+                    if (dataSet.get(i).getInkyDistance() == DataTuple.DiscreteTag.NONE)
+                        nbrOfNone++;
                 }
                 break;
             case PINKY_DISTANCE:
@@ -209,6 +306,8 @@ public class AttributeSelector {
                         nbrOfHigh++;
                     if (dataSet.get(i).getPinkyDistance() == DataTuple.DiscreteTag.VERY_HIGH)
                         nbrOfVeryHigh++;
+                    if (dataSet.get(i).getPinkyDistance() == DataTuple.DiscreteTag.NONE)
+                        nbrOfNone++;
                 }
                 break;
             case SUE_DISTANCE:
@@ -223,6 +322,8 @@ public class AttributeSelector {
                         nbrOfHigh++;
                     if (dataSet.get(i).getSueDistance() == DataTuple.DiscreteTag.VERY_HIGH)
                         nbrOfVeryHigh++;
+                    if (dataSet.get(i).getSueDistance() == DataTuple.DiscreteTag.NONE)
+                        nbrOfNone++;
                 }
                 break;
         }
@@ -231,7 +332,8 @@ public class AttributeSelector {
                 nbrOfLow/nbrOfTuples*(infoInDiscreteTagInfo(nbrOfLow))+
                 nbrOfMedium/nbrOfTuples*(infoInDiscreteTagInfo(nbrOfMedium))+
                 nbrOfHigh/nbrOfTuples*(infoInDiscreteTagInfo(nbrOfHigh))+
-                nbrOfVeryHigh/nbrOfTuples*(infoInDiscreteTagInfo(nbrOfVeryHigh));
+                nbrOfVeryHigh/nbrOfTuples*(infoInDiscreteTagInfo(nbrOfVeryHigh))+
+                nbrOfNone/nbrOfTuples*(infoInDiscreteTagInfo(nbrOfNone));
         return infoInTag;
     }
 
